@@ -203,6 +203,8 @@ vpnPeerDNS=on
 vpnDebug=off
 vpnNAT=on
 vpnEnableLCP=on
+vpnLCPFailure=5
+vpnLCPInterval=30
 vpnAuthProtocol=0
 vpnInterface=WAN
 vpnServer=192.168.200.1
